--- a/app/cart.html
+++ b/app/cart.html
@@ -218,9 +218,158 @@
     </div>
 </section>
 
-<section id="drinks-offer">
+<section id="drinks-offer" class="block">
     <div class="container">
+        <div class="drinks-offer__title block__title">Желаете напитки?</div>
+        <div class="row">
+            <div class="col-lg-2 col-xl-2">
+                <nav class="drinks-nav">
+                    <ul>
+                        <li class="active"><a href="#">Лимонады</a></li>
+                        <li><a href="#">Соки</a></li>
+                        <li><a href="#">Молочные коктейли</a></li>
+                        <li><a href="#">Фреши</a></li>
+                        <li><a href="#">Чай</a></li>
+                        <li><a href="#">Кофе</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="col-lg-10 col-xl-10">
+                <div class="row">
+                    <div class="col-lg-2 drinks-offer__item active ">
+                        <div class="drinks-offer__item__wrapper">
+                            <div class="drinks-offer__img">
+                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
+                            </div>
+                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
+                            <div class="ui-control-foodsize drinks">
+                                <ul>
+                                    <li class="active"><a href="#">0.4 л</a></li>
+                                    <li><a href="#">0.6 л</a></li>
+                                </ul>
+                            </div>
+                            <div class="row v-middle">
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="cart__item__price">499 ₽</div>
+                                </div>
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="ui-amount-control vertical">
+                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
+                                        <span class="ui-amount-control__value">1</span>
+                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 drinks-offer__item active">
+                        <div class="drinks-offer__item__wrapper">
+                            <div class="drinks-offer__img">
+                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
+                            </div>
+                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
+                            <div class="ui-control-foodsize drinks">
+                                <ul>
+                                    <li class="active"><a href="#">0.4 л</a></li>
+                                    <li><a href="#">0.6 л</a></li>
+                                </ul>
+                            </div>
+                            <div class="row v-middle">
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="cart__item__price">499 ₽</div>
+                                </div>
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="ui-amount-control vertical">
+                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
+                                        <span class="ui-amount-control__value">1</span>
+                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 drinks-offer__item active">
+                        <div class="drinks-offer__item__wrapper">
+                            <div class="drinks-offer__img">
+                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
+                            </div>
+                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
+                            <div class="ui-control-foodsize drinks">
+                                <ul>
+                                    <li class="active"><a href="#">0.4 л</a></li>
+                                    <li><a href="#">0.6 л</a></li>
+                                </ul>
+                            </div>
+                            <div class="row v-middle">
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="cart__item__price">499 ₽</div>
+                                </div>
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="ui-amount-control vertical">
+                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
+                                        <span class="ui-amount-control__value">1</span>
+                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 drinks-offer__item active">
+                        <div class="drinks-offer__item__wrapper">
+                            <div class="drinks-offer__img">
+                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
+                            </div>
+                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
+                            <div class="ui-control-foodsize drinks">
+                                <ul>
+                                    <li class="active"><a href="#">0.4 л</a></li>
+                                    <li><a href="#">0.6 л</a></li>
+                                </ul>
+                            </div>
+                            <div class="row v-middle">
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="cart__item__price">499 ₽</div>
+                                </div>
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="ui-amount-control vertical">
+                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
+                                        <span class="ui-amount-control__value">1</span>
+                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="col-lg-2  drinks-offer__item active ">
+                        <div class="drinks-offer__item__wrapper">
+                            <div class="drinks-offer__img">
+                                <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
+                            </div>
+                            <div class="drinks-offer__item__title">Лимонад апельсиновый</div>
+                            <div class="ui-control-foodsize drinks">
+                                <ul>
+                                    <li class="active"><a href="#">0.4 л</a></li>
+                                    <li><a href="#">0.6 л</a></li>
+                                </ul>
+                            </div>
+                            <div class="row v-middle">
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="cart__item__price">499 ₽</div>
+                                </div>
+                                <div class="col-xl-6 col-lg-6">
+                                    <div class="ui-amount-control vertical">
+                                        <button class="minus-one-btn"><i class="icon-minus"></i></button>
+                                        <span class="ui-amount-control__value">1</span>
+                                        <button class="plus-one-btn"><i class="icon-plus"></i></button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
