--- a/public/cart.html
+++ b/public/cart.html
@@ -253,7 +253,7 @@
     <div class="container">
         <div class="drinks-offer__title block__title">Желаете напитки?</div>
         <div class="row">
-            <div class="col-lg-2 col-xl-2">
+            <div class="col-lg-2 col-xl-">
                 <nav class="drinks-nav">
                     <ul>
                         <li class="active"><a href="#">Лимонады</a></li>
@@ -267,7 +267,7 @@
             </div>
             <div class="col-lg-10 col-xl-10">
                 <div class="row">
-                    <div class="col-lg-2 drinks-offer__item active ">
+                    <div class="col drinks-offer__item active ">
                         <div class="drinks-offer__item__wrapper">
                             <div class="drinks-offer__img">
                                 <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
@@ -279,12 +279,12 @@
                                     <li><a href="#">0.6 л</a></li>
                                 </ul>
                             </div>
-                            <div class="row v-middle">
-                                <div class="col-xl-6 col-lg-6">
+                            <div class="row v-middle drinks-offer__item__bottom">
+                                <div class="col">
                                     <div class="cart__item__price">499 ₽</div>
                                 </div>
-                                <div class="col-xl-6 col-lg-6">
-                                    <div class="ui-amount-control vertical">
+                                <div class="col">
+                                    <div class="ui-amount-control vertical border-yellow">
                                         <button class="minus-one-btn"><i class="icon-minus"></i></button>
                                         <span class="ui-amount-control__value">1</span>
                                         <button class="plus-one-btn"><i class="icon-plus"></i></button>
@@ -293,7 +293,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 drinks-offer__item active">
+                    <div class="col drinks-offer__item">
                         <div class="drinks-offer__item__wrapper">
                             <div class="drinks-offer__img">
                                 <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
@@ -305,12 +305,12 @@
                                     <li><a href="#">0.6 л</a></li>
                                 </ul>
                             </div>
-                            <div class="row v-middle">
-                                <div class="col-xl-6 col-lg-6">
+                            <div class="row v-middle drinks-offer__item__bottom">
+                                <div class="col">
                                     <div class="cart__item__price">499 ₽</div>
                                 </div>
-                                <div class="col-xl-6 col-lg-6">
-                                    <div class="ui-amount-control vertical">
+                                <div class="col">
+                                    <div class="ui-amount-control vertical border-yellow">
                                         <button class="minus-one-btn"><i class="icon-minus"></i></button>
                                         <span class="ui-amount-control__value">1</span>
                                         <button class="plus-one-btn"><i class="icon-plus"></i></button>
@@ -319,7 +319,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 drinks-offer__item active">
+                    <div class="col drinks-offer__item ">
                         <div class="drinks-offer__item__wrapper">
                             <div class="drinks-offer__img">
                                 <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
@@ -331,12 +331,12 @@
                                     <li><a href="#">0.6 л</a></li>
                                 </ul>
                             </div>
-                            <div class="row v-middle">
-                                <div class="col-xl-6 col-lg-6">
+                            <div class="row v-middle drinks-offer__item__bottom">
+                                <div class="col">
                                     <div class="cart__item__price">499 ₽</div>
                                 </div>
-                                <div class="col-xl-6 col-lg-6">
-                                    <div class="ui-amount-control vertical">
+                                <div class="col">
+                                    <div class="ui-amount-control vertical border-yellow">
                                         <button class="minus-one-btn"><i class="icon-minus"></i></button>
                                         <span class="ui-amount-control__value">1</span>
                                         <button class="plus-one-btn"><i class="icon-plus"></i></button>
@@ -345,7 +345,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 drinks-offer__item active">
+                    <div class="col drinks-offer__item ">
                         <div class="drinks-offer__item__wrapper">
                             <div class="drinks-offer__img">
                                 <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
@@ -357,12 +357,12 @@
                                     <li><a href="#">0.6 л</a></li>
                                 </ul>
                             </div>
-                            <div class="row v-middle">
-                                <div class="col-xl-6 col-lg-6">
+                            <div class="row v-middle drinks-offer__item__bottom">
+                                <div class="col">
                                     <div class="cart__item__price">499 ₽</div>
                                 </div>
-                                <div class="col-xl-6 col-lg-6">
-                                    <div class="ui-amount-control vertical">
+                                <div class="col">
+                                    <div class="ui-amount-control vertical border-yellow">
                                         <button class="minus-one-btn"><i class="icon-minus"></i></button>
                                         <span class="ui-amount-control__value">1</span>
                                         <button class="plus-one-btn"><i class="icon-plus"></i></button>
@@ -372,7 +372,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-2  drinks-offer__item active ">
+                    <div class="col drinks-offer__item ">
                         <div class="drinks-offer__item__wrapper">
                             <div class="drinks-offer__img">
                                 <img src="./assets/images/drinks/1.png" alt="drinks" class="img-fluid"/>
@@ -384,12 +384,12 @@
                                     <li><a href="#">0.6 л</a></li>
                                 </ul>
                             </div>
-                            <div class="row v-middle">
-                                <div class="col-xl-6 col-lg-6">
+                            <div class="row v-middle drinks-offer__item__bottom">
+                                <div class="col">
                                     <div class="cart__item__price">499 ₽</div>
                                 </div>
-                                <div class="col-xl-6 col-lg-6">
-                                    <div class="ui-amount-control vertical">
+                                <div class="col">
+                                    <div class="ui-amount-control vertical border-yellow">
                                         <button class="minus-one-btn"><i class="icon-minus"></i></button>
                                         <span class="ui-amount-control__value">1</span>
                                         <button class="plus-one-btn"><i class="icon-plus"></i></button>
@@ -406,7 +406,39 @@
 
 <section id="checkout">
     <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-xl-6">
+                <div class="row">
+                    <div class="col">
+                        <div class="checkout-address">
+                            <div class="checkout-address__title">Адрес доставки</div>
+                            <div class="checkout-address__value">ул. Таганская, д.39стр6, подьезд 1, кв. 11</div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="checkout-payment">
+                            <div class="checkout-payment__title">Способ оплаты</div>
+                            <div class="checkout-payment__value">Оплата курьеру наличными</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-xl-6">
+                <div class="row v-middle">
+                    <div class="col text-right">
+                        <div id="total-cart-price">1 449 ₽</div>
+                    </div>
+                    <div class="col">
+                        <button class="checkout__submit btn">Оформить заказ</button>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+        <div class="text-right">
+            <p>На вашем счете 300 бонусных рублей</p>
+            <p><a href="#" class="actionlink">Применить к счету</a> <a href="#" class="actionlink">Копить дальше</a></p>
+        </div>
     </div>
 </section>
 
