--- a/app/cart.html
+++ b/app/cart.html
@@ -8,7 +8,7 @@
 
 <section id="cart">
     <div class="container">
-        <div class="cart-nav">Назад к меню</div>
+        <div class="page-nav"><a href="#"><i class="arrow-left"></i>Назад к меню</a></div>
         <div class="cart__top">
             <h2 class="pagetitle col-md-6">Корзина</h2>
             <div class="cart__info col-md-6 text-right">В вашей корзине 4 блюда.</div>
@@ -381,13 +381,13 @@
                     <div class="col">
                         <div class="checkout-address">
                             <div class="checkout-address__title">Адрес доставки</div>
-                            <div class="checkout-address__value">ул. Таганская, д.39стр6, подьезд 1, кв. 11</div>
+                            <div class="checkout-address__value"><a href="#" class="actionlink">ул. Таганская, д.39стр6, подьезд 1, кв. 11 <i class=""icon-arrow-down"></i></i></a></div>
                         </div>
                     </div>
                     <div class="col">
                         <div class="checkout-payment">
                             <div class="checkout-payment__title">Способ оплаты</div>
-                            <div class="checkout-payment__value">Оплата курьеру наличными</div>
+                            <div class="checkout-payment__value"><a href="#" class="actionlink">Оплата курьеру наличными <i class=""icon-arrow-down"></i></a></div>
                         </div>
                     </div>
                 </div>
@@ -404,8 +404,8 @@
 
             </div>
         </div>
-        <div class="text-right">
-            <p>На вашем счете 300 бонусных рублей</p>
+        <div class="bonus-balance text-right">
+            <p class="bonus-balance__title">На вашем счете <span class="bonus-balance__value">300</span> бонусных рублей</p>
             <p><a href="#" class="actionlink">Применить к счету</a> <a href="#" class="actionlink">Копить дальше</a></p>
         </div>
     </div>
