live fix+ mobile

--- a/app/live.html
+++ b/app/live.html
@@ -22,13 +22,15 @@
             </div>
             <div class="col-lg-7 col-xl-7">
                 <div class="row">
-                    <div class="col-lg-7 col-xl-7"><p>Ваш заказ №356</p>
-                        <p>Будет доставлен до 18:55</p>
-                        <p>Если наш курьер не успеет доставить заказ
+                    <div class="col-lg-7 col-xl-7"><p class="order-num">Ваш заказ №356</p>
+                        <p class="order-delivery-date">Будет доставлен до 18:55</p>
+                        <p class="order-delivery-desc">Если наш курьер не успеет доставить заказ
                             в течение 60 минут, мы подарим Вам 300 бонусных рублей.
                         </p></div>
                     <div class="col-lg-5 col-xl-5">
-                        <div class="timer"></div>
+                        <div class="timer">
+                            <span class="timer__min">59</span> мин  <span class="timer__sec">37</span> сек
+                        </div>
                     </div>
                 </div>
 
@@ -36,65 +38,73 @@
                 <div class="order-details">
                     <div class="row">
                         <div class="col-md-6 order-details__item">
+                            <div class="order-details__item__title">1. Пиццони с грибами</div>
                             <div class="row">
+
                                 <div class="col">
-                                    <div class="order-details__item__title">1. Пиццони с грибами</div>
-                                    <div class="order-details__item__img"><img src="./assets/images/food/small/1.jpg"
+
+                                    <div class="order-details__item__img"><img src="./assets/images/food/small/1.png"
                                                                                width="130" height="117"/></div>
                                     <div class="order-details__status">Готово</div>
                                 </div>
                                 <div class="col">
                                     <ul class="ingreds tags">
-                                        <li class="tags__item">Салями 2x</li>
-                                        <li class="tags__item">Моцарелла 2x</li>
+                                        <li class="tags__item">Салями <span>2x</span></li>
+                                        <li class="tags__item">Моцарелла <span>2x</span></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6 order-details__item">
+                            <div class="order-details__item__title">2. Пиццони с грибами</div>
                             <div class="row">
+
                                 <div class="col">
-                                    <div class="order-details__item__title">2. Пиццони с грибами</div>
-                                    <div class="order-details__item__img"><img src="./assets/images/food/small/1.jpg"
+
+                                    <div class="order-details__item__img"><img src="./assets/images/food/small/1.png"
                                                                                width="130" height="117"/></div>
                                     <div class="order-details__status">Готово</div>
                                 </div>
                                 <div class="col">
                                     <ul class="ingreds tags">
-                                        <li class="tags__item">Салями 2x</li>
-                                        <li class="tags__item">Моцарелла 2x</li>
+                                        <li class="tags__item">Салями <span>2x</span></li>
+                                        <li class="tags__item">Моцарелла <span>2x</span></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6 order-details__item">
+                            <div class="order-details__item__title">3. Пиццони с грибами</div>
                             <div class="row">
+
                                 <div class="col">
-                                    <div class="order-details__item__title">3. Пиццони с грибами</div>
-                                    <div class="order-details__item__img"><img src="./assets/images/food/small/1.jpg"
+
+                                    <div class="order-details__item__img"><img src="./assets/images/food/small/1.png"
                                                                                width="130" height="117"/></div>
                                     <div class="order-details__status">Готово</div>
                                 </div>
                                 <div class="col">
                                     <ul class="ingreds tags">
-                                        <li class="tags__item">Салями 2x</li>
-                                        <li class="tags__item">Моцарелла 2x</li>
+                                        <li class="tags__item">Салями <span>2x</span></li>
+                                        <li class="tags__item">Моцарелла <span>2x</span></li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6 order-details__item">
+                            <div class="order-details__item__title">4. Пиццони с грибами</div>
                             <div class="row">
+
                                 <div class="col">
-                                    <div class="order-details__item__title">4. Пиццони с грибами</div>
-                                    <div class="order-details__item__img"><img src="./assets/images/food/small/1.jpg"
+
+                                    <div class="order-details__item__img"><img src="./assets/images/food/small/1.png"
                                                                                width="130" height="117"/></div>
                                     <div class="order-details__status">Готово</div>
                                 </div>
                                 <div class="col">
                                     <ul class="ingreds tags">
-                                        <li class="tags__item">Салями 2x</li>
-                                        <li class="tags__item">Моцарелла 2x</li>
+                                        <li class="tags__item">Салями <span>2x</span></li>
+                                        <li class="tags__item">Моцарелла <span>2x</span></li>
                                     </ul>
                                 </div>
                             </div>
