--- a/app/cart.html
+++ b/app/cart.html
@@ -8,7 +8,7 @@
 
 <section id="cart">
     <div class="container">
-        <div class="page-nav"><a href="#"><i class="arrow-left"></i>Назад к меню</a></div>
+        <div class="page-nav"><a href="/"><i class="arrow-left"></i>Назад к меню</a></div>
         <div class="cart__top">
             <h2 class="pagetitle col-md-6">Корзина</h2>
             <div class="cart__info col-md-6 text-right">В вашей корзине 4 блюда.</div>
@@ -398,7 +398,7 @@
                         <div id="total-cart-price">1 449 ₽</div>
                     </div>
                     <div class="col">
-                        <button class="checkout__submit btn">Оформить заказ</button>
+                        <button class="checkout__submit btn" onclick="location.href='/live.html'">Оформить заказ</button>
                     </div>
                 </div>
 
