--- a/app/live.html
+++ b/app/live.html
@@ -9,7 +9,7 @@
 
 <section id="broadcast">
     <div class="container">
-        <div class="page-nav"><a href="#"><i class="arrow-left"></i>Назад к меню</a></div>
+        <div class="page-nav"><a href="/"><i class="arrow-left"></i>Назад к меню</a></div>
         <div class="broadcast__top row">
             <h2 class="pagetitle col-md-6">Трансляция с кухни</h2>
             <div class="cart__info col-md-6 text-right"></div>
