--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
                         <a href="#" class="socials__item youtube"><i class="icon-youtube-play"></i></a>
                     </div>
                     <a href="#login" class="login-link">Войти</a>
-                    <a class="btn basket-btn">Корзина</a>
+                    <a href="cart.html" class="btn basket-btn">Корзина</a>
                     <div class="total-price">1 990 ₽</div>
                 </div>
             </div>
