--- a/public/cart.html
+++ b/public/cart.html
@@ -29,7 +29,7 @@
                         <a href="#" class="socials__item youtube"><i class="icon-youtube-play"></i></a>
                     </div>
                     <a href="#login" class="login-link">Войти</a>
-                    <a class="btn basket-btn">Корзина</a>
+                    <a href="cart.html" class="btn basket-btn">Корзина</a>
                     <div class="total-price">1 990 ₽</div>
                 </div>
             </div>
@@ -39,7 +39,7 @@
 
 <section id="cart">
     <div class="container">
-        <div class="page-nav"><a href="#"><i class="arrow-left"></i>Назад к меню</a></div>
+        <div class="page-nav"><a href="/"><i class="arrow-left"></i>Назад к меню</a></div>
         <div class="cart__top">
             <h2 class="pagetitle col-md-6">Корзина</h2>
             <div class="cart__info col-md-6 text-right">В вашей корзине 4 блюда.</div>
@@ -429,7 +429,7 @@
                         <div id="total-cart-price">1 449 ₽</div>
                     </div>
                     <div class="col">
-                        <button class="checkout__submit btn">Оформить заказ</button>
+                        <button class="checkout__submit btn" onclick="location.href='/live.html'">Оформить заказ</button>
                     </div>
                 </div>
 
