--- a/public/live.html
+++ b/public/live.html
@@ -29,7 +29,7 @@
                         <a href="#" class="socials__item youtube"><i class="icon-youtube-play"></i></a>
                     </div>
                     <a href="#login" class="login-link">Войти</a>
-                    <a class="btn basket-btn">Корзина</a>
+                    <a href="cart.html" class="btn basket-btn">Корзина</a>
                     <div class="total-price">1 990 ₽</div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
 
 <section id="broadcast">
     <div class="container">
-        <div class="page-nav"><a href="#"><i class="arrow-left"></i>Назад к меню</a></div>
+        <div class="page-nav"><a href="/"><i class="arrow-left"></i>Назад к меню</a></div>
         <div class="broadcast__top row">
             <h2 class="pagetitle col-md-6">Трансляция с кухни</h2>
             <div class="cart__info col-md-6 text-right"></div>
