new small devices

--- a/public/cart.html
+++ b/public/cart.html
@@ -11,17 +11,17 @@
     <div class="header__topline">
         <div class="container">
             <div class="row v-middle">
-                <div class="col-lg-3 col-xl-3">
+                <div class="col-lg-3 col-xl-3 col-sm-3">
                     <a href="#city-select" class="select-city-link">Москва</a>
-                    <img src="./assets/images/logo.svg" alt="logo"/>
+                    <a href="/"><img src="./assets/images/logo.svg" alt="logo"/></a>
                 </div>
-                <div class="col-lg-4 col-xl-4">
+                <div class="col-lg-4 col-xl-4 col-sm-4">
                     <div class="phone">
                         <p class="phone__value"> 8-800-555-55-55</p>
                         <p>Звонок бесплатный</p>
                     </div>
                 </div>
-                <div class="col-lg-5 col-xl-5 text-right">
+                <div class="col-lg-5 col-xl-5 col-sm-5 col text-right">
                     <div class="socials">
                         <a href="#" class="socials__item vk"><i class="icon-vk"></i> </a>
                         <a href="#" class="socials__item fb"><i class="icon-facebook"></i></a>
@@ -448,13 +448,13 @@
             <p>Вопросы и пожелания Вы можете прислать нам на электропочту,<br/>
                 <a href="mailto:sos@foodkostgroup.ru">sos@foodkostgroup.ru</a></p>
             <div class="row">
-                <div class="col-lg-4 col-xl-4">
+                <div class="col-lg-4 col-xl-4 col-sm-4">
                     <a href="#agreements">Пользовательское соглашение</a>
                 </div>
-                <div class="col-lg-4 col-xl-4">
+                <div class="col-lg-4 col-xl-4 col-sm-4">
                     <a href="#agreements">Политика конфиденциальности</a>
                 </div>
-                <div class="col-lg-4 col-xl-4">
+                <div class="col-lg-4 col-xl-4 col-sm-4 ">
                     <a href="#agreements">Все о наших блюдах</a>
                 </div>
             </div>
@@ -463,17 +463,17 @@
     <div class="footer__bottom">
         <div class="container">
             <div class="row v-middle">
-                <div class="col-lg-2 col-xl-2">
+                <div class="col-lg-2 col-xl-2 col-sm-3">
                     <img src="./assets/images/logo-words.svg" alt="logo" class="img-fluid"/>
                 </div>
-                <div class="col-lg-7 col-xl-7 text-center">
+                <div class="col-lg-7 col-xl-7 col-sm-4 text-center">
                     © 2017 Burger & Pizzoni. All Right Recived.
                 </div>
-                <div class="col-lg-2 col-xl-2 text-right">
+                <div class="col-lg-2 col-xl-2 col-sm-3  text-right">
                     <img src="./assets/images/fcg.svg" alt="logo" class="img-fluid"/>
 
                 </div>
-                <div class="col-lg-1 col-xl-1">
+                <div class="col-lg-1 col-xl-1 col-sm-2">
 
                     <span>Блог Магомеда Костоева</span>
                 </div>
