--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <section id="main">
     <div class="container food">
         <div class="row">
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -32,20 +32,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -67,20 +67,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -102,13 +102,13 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0 text-right">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4  text-right">
                                 <button class="food__item__btn btn btn-add-to-cart hide">В корзину</button>
                                 <div class="food__item__amount ui-amount-control">
                                     <button class="minus-one-btn"><i class="icon-minus"></i></button>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -142,20 +142,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -177,20 +177,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -212,20 +212,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -247,20 +247,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -282,20 +282,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -317,20 +317,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -352,20 +352,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -387,20 +387,20 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!-- /food__item -->
-            <div class="col-lg-4 col-xl-4 food__item">
+            <div class="col-lg-4 col-xl-4 col-sm-6 food__item">
                 <div class="food__item__wrapper">
                     <div class="food__item__img"><img src="./assets/images/food/1.jpg" class="img-fluid"/></div>
                     <h2 class="food__item__title">Овощная с слоеными овощами</h2>
@@ -422,13 +422,13 @@
                     </div>
                     <div class="food__item__bottom">
                         <div class="row v-middle">
-                            <div class="col-lg-4 col-xl-4 food__item__price">
+                            <div class="col-lg-4 col-xl-4 col-sm-4 food__item__price">
                                 597 ₽
                             </div>
-                            <div class="col-lg-3 col-xl-3  food__item__weight">
+                            <div class="col-lg-3 col-xl-3  col-sm-4 food__item__weight">
                                 700 г
                             </div>
-                            <div class="col-lg-5 col-xl-5 padding0">
+                            <div class="col-lg-5 col-xl-5 padding0 col-sm-4 ">
                                 <button class="food__item__btn btn btn-add-to-cart">В корзину</button>
                             </div>
                         </div>
