--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 <section id="mainnavbar">
     <div class="container">
         <div class="row v-middle">
-            <div class="col-lg-9 col-xl-9  order-3 ">
+            <div class="col-lg-9 col-xl-9 order-sm-12  ">
                 <nav>
                     <ul>
                         <li><a href="#">Бургеры</a></li>
@@ -68,7 +68,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-lg-3 col-xl-3  order-2">
+            <div class="col-lg-3 col-xl-3    ">
                 <div class="filter">
                     <button class="btn btn-slim filter-btn">Фильтр</button>
                     <ul>
