--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
     <div class="container food">
         <div id="app">
             <div class="row">
-                <div class="col-12 col-md-6  col-lg-4 col-xl-4   food__item" v-for="food in menu">
+                <div class="col-12 col-md-6  col-lg-4 col-xl-4   food__item" v-for="food in menu.categs">
                     <food :data="food"></food>
                 </div>
             </div>
