--- a/public/index.html
+++ b/public/index.html
@@ -94,22 +94,13 @@
 
 
 </section>
+
+<div id="app">
 <section id="mainnavbar">
     <div class="container">
         <div class="row v-middle">
             <div class="col-lg-9 col-xl-9  ">
-                <nav>
-                    <ul>
-                        <li><a href="#">Бургеры</a></li>
-                        <li class="active"><a href="#">Пиццони</a></li>
-                        <li><a href="#">Стейки</a></li>
-                        <li><a href="#">Гарниры</a></li>
-                        <li><a href="#">Салаты</a></li>
-                        <li><a href="#">Супы</a></li>
-                        <li><a href="#">Десерты</a></li>
-                        <li><a href="#">Напитки</a></li>
-                    </ul>
-                </nav>
+              <mainmenu :data="menu"></mainmenu>
             </div>
             <div class="col-lg-3 col-xl-3    ">
                 <div class="filter">
@@ -134,16 +125,16 @@
 </section>
 <section id="main">
     <div class="container food">
-        <div id="app">
+
             <div class="row">
-                <div class="col-12 col-md-6  col-lg-4 col-xl-4   food__item" v-for="food in menu.categs">
+                <div class="col-12 col-md-6  col-lg-4 col-xl-4   food__item" v-for="food in menu[currentArea].categs">
                     <food :data="food"></food>
                 </div>
             </div>
         </div>
-    </div>
-</section>
 
+</section>
+</div>
 <footer class="footer">
     <div class="container">
         <div class="wrapper-small text-center">
