fix font-size and fixed scroll

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,10 @@
 <section id="mainnavbar">
     <div class="container">
         <div class="row v-middle">
-            <div class="col-lg-9 col-xl-9  ">
+            <div class="col-lg-1 col-xl-1 logo">
+                <img src="./assets/images/logo.png" alt="logo"  class="img-fluid"/>
+            </div>
+            <div class="col-lg-8 col-xl-8  ">
               <mainmenu :data="menu"></mainmenu>
             </div>
             <div class="col-lg-3 col-xl-3    ">
