food site local food api

--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
     <div class="container food">
 
             <div class="row">
-                <div class="col-12 col-md-6  col-lg-4 col-xl-4   food__item" v-for="food in menu[currentArea].categs">
+                <div class="col-12 col-md-6  col-lg-4 col-xl-4  food__item" v-if="ready" v-for="food in menu[currentArea].categs">
                     <food :data="food"></food>
                 </div>
             </div>
