--- a/app/index.html
+++ b/app/index.html
@@ -18,20 +18,9 @@
               <mainmenu :data="menu"></mainmenu>
             </div>
             <div class="col-lg-3 col-xl-3    ">
-                <div class="filter">
-                    <button class="btn btn-slim filter-btn">Фильтр</button>
-                    <ul>
-                        <li><a href="#">Вегетарианцам</a></li>
-                        <li><a href="#">С рыбой</a></li>
-                        <li><a href="#">С говядиной</a></li>
-                        <li><a href="#">С курицей</a></li>
-                        <li><a href="#">С индейкой</a></li>
-                        <li><a href="#">С морепродуктами</a></li>
-                    </ul>
-                </div>
-                <div class="search-input">
-                    <input type="text" value="Поиск" />
-                </div>
+               <filters :filters="filters"></filters>
+
+                <search></search>
 
             </div>
         </div>
@@ -42,7 +31,7 @@
     <div class="container food">
 
             <div class="row">
-                <div class="col-12 col-md-6  col-lg-4 col-xl-4   food__item" v-for="food in menu[currentArea].categs">
+                <div class="col-12 col-md-6  col-lg-4 col-xl-4   food__item" v-for="food in foods">
                     <food :data="food"></food>
                 </div>
             </div>
