--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
 
 
     <modal name="register" height="auto" adaptive v-cloak >
-        <button @click="$modal.hide('login')" class="modal-close">
+        <button @click="$modal.hide('register')" class="modal-close">
             x
         </button>
         <h3 class="modal-header">Регистрация</h3>
@@ -79,6 +79,12 @@
 
                 <div class="form-group">
                     <input type="text" class="form-control" name="phone" value="" placeholder="Телефон" required />
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="password" value="" placeholder="Пароль" required />
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" name="password_confirm" value="" placeholder="Подтверждение пароля" required />
                 </div>
                 <div class="checkbox">
                     <label>
